@@ -37,7 +37,9 @@ Version 2.1
 - inclusions and imports "with context" forward all variables now, not only
   the initial context.
 
-- added a cycle helper called `cycle`.
+- added a cycle helper called `cycler`.
+
+- added a joining helper called `joiner`.
 
 Version 2.0
 -----------
